feat: Integrate Google Sign-in and AdSense
Adds Google Identity Services for user authentication and Google AdSense for monetization.
Removes deprecated PromptCategory enum and associated fields from PromptData.
Updates Gemini service to handle API key management more robustly and initializes Google GenAI client per API call.
Refactors Header component to manage user state, language selection, and render Google Sign-in button.
Introduces multi-language support with English and Chinese translations via constants.
Updates other components to align with new type definitions and UI changes.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         background: #94a3b8;
       }
     </style>
+    <!-- Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0000000000000000" crossorigin="anonymous"></script>
   <script type="importmap">
 {
   "imports": {
